tests/instantiating/empty_group/stderr.golden
error: group 'grp' is empty
bus.fbd +3:3
   |
 3 |   grp g_t
   |   ^^^
